# icub-grasping

./: .gitignore  .gitmodules  Mobilenet_ssd.py  README.md  ReadMe(camera config).txt  add_comfort.bash  env.bash  env_setup.bash  exec_docker_tdd.bash  run_docker_tdd.bash  run_project.bash
Matlab_planning/: Bi_RRT_star_c_space.m  DH_test.m  README.md  RRT_star.m  RRT_star_c_space.m  isCollisionC.m  manipulator.m  matlab_ros.m  point_to_line.m  rrt.m  workspace_and_wall_sd.m
Planners/: README.md
Vision/: README.md  web.ipynb
docker/: install_docker.bash
icub_plugin/: CMakeLists.txt  README.md  icub.world  icub_plugin.cc
icub_with_hands(real_sense)/: icub_with_hands.sdf  model.config
new_world/: README.txt  (+1 more)
project/: CMakeLists.txt  buildme.bash
project/config/demo_day_1/: config.ini
project/include/: project.h
project/scenes/: demo_day.world  demo_day_n.world  demo_day_nn.world  demo_day_nnn.world
project/scenes/models/3-shelf/: model.config  model.sdf
project/scenes/models/bottle/: model.sdf
project/scenes/models/bottle1/: model.config  model.sdf
project/scenes/models/bottle1/meshes/: model.dae
project/scenes/models/bus1/: model.config  model.sdf
project/scenes/models/car/: model.config  model.sdf
project/scenes/models/car/meshes/: model.dae
project/scenes/models/myicub/: myicub.sdf
project/scenes/models/myicub_fixed/: myicub_fixed.sdf
project/scripts/: mobilenet_ssd_vision.py  mobilenet_ssd_vision_1.py  vision.py  yarp_hand_cartisian_control.py  yarp_vision_connector.py
project/src/: LeftArmThread.cpp  RightArmThread.cpp  main.cpp
(+44 files in other folders)
